# paramflow

./: .gitignore  MANIFEST.in  README.md  frozen.py  frozen_attr_dict.py  frozen_test.py  params.py  params_test.py  parser.py  publish.sh  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
dparams/: __init__.py  convert.py  frozen.py  frozen_test.py  params.py  parser.py
examples/: dqn_eval.toml  dqn_params.toml  dqn_train.toml  params.ini  params.json  params.toml  params.yaml  print_params.py  script.py  script1.py
examples/usage/: app.py  params.toml
paramflow/: convert.py  frozen.py  params.py  parser.py
scripts/: new_version.sh  publish.sh
tests/: convert_test.py  frozen_test.py  params_test.py
