[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paramflow"
version = "0.7.1"
description = "A lightweight library for hyperparameter and configuration management"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = ["pyyaml"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dotenv = ["python-dotenv"]

[project.urls]
Homepage = "https://github.com/mduszyk/paramflow"
Repository = "https://github.com/mduszyk/paramflow"

[tool.setuptools.packages.find]
where = ["."]
